Delivery of the Twitter adapter accepting demands and returning list of submitted ones